# PCS_2026

./: primofile_locale.txt
esercitazione1/: CMakelists.txt  es_1.cpp  es_1_arg.cpp
esercitazione2/: CmakeLists.txt  bubblesort.cpp  esercitazione2.cpp  memoria.cpp
esercitazione3/: CMakeLists.txt  esercitazione3.cpp  prova  prova4  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  measure_sorts.cpp  osservazioni.txt  sorts.hpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksort_hybrid.cpp
esercitazione6/: CMakeLists.txt  grafi.hpp  grafi_es6.cpp
