cmake_minimum_required(VERSION 3.20) 
project(esercitazione_5)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")

#creo il target per l'eseguibile principale del mio progetto software
set(SRC_test_sorts timecounter.cpp measure_sorts.cpp sorts.hpp)
add_executable(measure_sorts ${SRC_test_sorts})

#creo i target per gli eseguibili che effettueranno i test unitari
add_executable(test_bubblesort test_bubblesort.cpp)
add_test(NAME bubblesort COMMAND test_bubblesort)

add_executable(test_insertionsort test_insertionsort.cpp)
add_test(NAME insertionsort COMMAND test_insertionsort)

add_executable(test_selectionsort test_selectionsort.cpp)
add_test(NAME selectionsort COMMAND test_selectionsort)

add_executable(test_mergesort test_mergesort.cpp)
add_test(NAME mergesort COMMAND test_mergesort)

add_executable(test_quicksort test_quicksort.cpp)
add_test(NAME quicksort COMMAND test_quicksort)

add_executable(test_quicksort_hybrid test_quicksort_hybrid.cpp)
add_test(NAME quicksort_hybrid COMMAND test_quicksort_hybrid)

enable_testing()